feat: 첫/끝점을 경로에 포함하여 정확도 향상